update logic generate pdf